# phc-analytics-portfolio

./: .gitignore  01_mock_data.ipynb  01_mock_data_final.ipynb  Makefile  README.md  app.py  dim_artigo.csv  docker-compose.odoo.yml  pyproject.toml  run_pipeline.py  tabela_detalhe_vendas.csv
.github/workflows/: data-quality.yml
data/: mock_documents.py
deliverables/PHC_Analytics/02_Data_Mock/: dim_cliente.csv  dim_tempo.csv  dim_vendedor.csv  fact_venda.csv  (+1 more)
docker/odoo/: docker-compose.yml
docs/: PHC_Odoo_Prestashop_SNAPSHOT.md  architecture.md  data_contract.md  data_quality_contract.md  odoo_prestashop_integration_plan.md  prestashop_data_contract.md  prestashop_mapping.md  roadmap_next_phase.md
integrations/odoo/: docker-compose.odoo.yml
observability/: README.md
observability/sql/: 01_pipeline_run_log.sql  02_run_start.sql  03_run_finish.sql  04_health_last_run.sql
orchestration/: README.md  run_pipeline.py
orchestration/sql/: health_last_success.sql
orchestration/steps/: contracts.py  last_run_check.py  registry.py  sample_step.py
outputs/: clientes_inativos.csv  faturacao_mensal.csv  kpi_cards.csv  margem_mensal.csv  top_artigos.csv  top_clientes.csv
scripts/: run_dq_folder.sh
sql/analytics/: data_quality_dim_customer.sql  dim_customer.sql  dim_date.sql
sql/ci/: seed_dq_db.sql
sql/migrations/: 001_init_analytics.sql
src/jweb_phc_analytics/: __init__.py
src/phc_analytics/: interactive_playground.py
tests/: test_dq_outputs.py  test_pipeline_contract.py  test_prestashop_normalize_customers.py  test_quality_fact_documents.py
(+36 files in other folders)
